--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ jsonschema = "^4.0.0"
 pathable = "^0.4.1"
 python = "^3.7.0"
 PyYAML = ">=5.1"
+typing-extensions = "^4.3.0"
 
 [tool.poetry.extras]
 dev = ["pre-commit"]
