--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,11 +46,8 @@ python = "^3.7.0"
 PyYAML = ">=5.1"
 typing-extensions = "^4.3.0"
 
-[tool.poetry.extras]
-dev = ["pre-commit"]
-
 [tool.poetry.dev-dependencies]
-pre-commit =  {version = "*", optional = true}
+pre-commit = "*"
 pytest = "^6.2.5"
 pytest-flake8 = "=1.0.7"
 pytest-cov = "^3.0.0"
