--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-jsonschema = "^4.0.0"
+jsonschema = ">=4.0.0,<4.18.0"
 pathable = "^0.4.1"
 python = "^3.7.0"
 PyYAML = ">=5.1"
