--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,10 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-jsonschema = ">=4.0.0,<4.18.0"
+jsonschema = [
+    {version = "^4.18.0a1", allow-prereleases = true, python = ">=3.8"},
+    {version = ">=4.0.0,<4.18.0", python = "<3.8"}
+]
 pathable = "^0.4.1"
 python = "^3.7.0"
 PyYAML = ">=5.1"
