--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ files = "jsonschema_spec"
 strict = true
 
 [[tool.mypy.overrides]]
-module = "jsonschema.validators"
+module = "jsonschema_specifications"
 ignore_missing_imports = true
 
 [tool.poetry]
@@ -40,11 +40,12 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-jsonschema = ">=4.0.0,<4.18.0"
 pathable = "^0.4.1"
 python = "^3.8.0"
 PyYAML = ">=5.1"
 requests = {version = "^2.31.0", optional = true}
+referencing = "^0.24.4"
+jsonschema-specifications = "^2023.3.4"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "*"
@@ -57,6 +58,7 @@ flynt = "0.76"
 mypy = "^0.971"
 types-PyYAML = "^6.0.11"
 types-requests = "^2.28.9"
+responses = "^0.23.1"
 deptry = "^0.11.0"
 
 [tool.pytest.ini_options]
