--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -20,10 +20,8 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Bootstrap poetry
-        run: |
-          curl -sL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python - -y
-          echo "$HOME/.local/bin" >> $GITHUB_PATH
+      - name: Set up poetry
+        uses: Gr1N/setup-poetry@v8
 
       - name: Build
         run: poetry build
