--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ pathable = "^0.4.1"
 python = "^3.7.0"
 PyYAML = ">=5.1"
 typing-extensions = "^4.3.0"
+requests = {version = "^2.31.0", optional = true}
 
 [tool.poetry.dev-dependencies]
 pre-commit = "*"
@@ -58,6 +59,7 @@ flynt = "0.76"
 mypy = "^0.971"
 types-PyYAML = "^6.0.11"
 types-requests = "^2.28.9"
+deptry = { version = "^0.11.0", python = ">=3.8" }
 
 [tool.pytest.ini_options]
 addopts = """
