--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ jsonschema = ">=4.0.0,<4.18.0"
 pathable = "^0.4.1"
 python = "^3.7.0"
 PyYAML = ">=5.1"
-typing-extensions = "^4.3.0"
+typing-extensions = "<4.6.0" # See https://github.com/p1c2u/jsonschema-spec/issues/14
 requests = {version = "^2.31.0", optional = true}
 
 [tool.poetry.dev-dependencies]
