--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,6 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
@@ -43,9 +42,8 @@ classifiers = [
 [tool.poetry.dependencies]
 jsonschema = ">=4.0.0,<4.18.0"
 pathable = "^0.4.1"
-python = "^3.7.0"
+python = "^3.8.0"
 PyYAML = ">=5.1"
-typing-extensions = {version = "<4.6.0", python = "<3.8"} # See https://github.com/p1c2u/jsonschema-spec/issues/14
 requests = {version = "^2.31.0", optional = true}
 
 [tool.poetry.dev-dependencies]
@@ -59,7 +57,7 @@ flynt = "0.76"
 mypy = "^0.971"
 types-PyYAML = "^6.0.11"
 types-requests = "^2.28.9"
-deptry = { version = "^0.11.0", python = ">=3.8" }
+deptry = "^0.11.0"
 
 [tool.pytest.ini_options]
 addopts = """
