--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,8 +44,8 @@ pathable = "^0.4.1"
 python = "^3.8.0"
 PyYAML = ">=5.1"
 requests = {version = "^2.31.0", optional = true}
-referencing = "^0.24.4"
-jsonschema-specifications = "^2023.3.4"
+referencing = ">=0.28.0,<0.30.0"
+jsonschema-specifications = "^2023.5.1"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "*"
