--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ flynt = "1.0.0"
 mypy = "^1.4.1"
 types-PyYAML = "^6.0.12"
 types-requests = "^2.31.0"
+typing-extensions = "^4.6.0"  # required by responses. See https://github.com/p1c2u/jsonschema-spec/issues/44
 responses = "^0.23.1"
 deptry = "^0.12.0"
 
