--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,8 @@ types-requests = "^2.31.0"
 typing-extensions = "^4.8.0"  # required by responses. See https://github.com/p1c2u/jsonschema-path/issues/44
 responses = "^0.23.3"
 deptry = "^0.12.0"
+pyflakes = "^2.5.0"
+bump2version = "^1.0.1"
 
 [tool.pytest.ini_options]
 addopts = """
