--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,9 @@ deptry = "^0.19.1"
 pyflakes = "^2.5.0"
 bump2version = "^1.0.1"
 
+[tool.poetry.extras]
+requests = ["requests"]
+
 [tool.pytest.ini_options]
 addopts = """
 --capture=no
