--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,12 +36,13 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Topic :: Software Development :: Libraries",
 ]
 
 [tool.poetry.dependencies]
 pathable = {version = "^0.4.1", python = ">=3.9.0,<4.0.0"}
-python = ">=3.9.0"
+python = ">=3.9.0,<4.0.0"
 PyYAML = ">=5.1"
 requests = {version = "^2.31.0", optional = true}
 referencing = "<0.37.0"
