--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ PyYAML = ">=5.1"
 requests = {version = "^2.31.0", optional = true}
 referencing = "<0.37.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pre-commit = "*"
 pytest = "^8.2.1"
 pytest-flake8 = "=1.1.1"
