Migrate to tbump

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ requests = {version = "^2.31.0", optional = true}
 referencing = "<0.37.0"
 
 [tool.poetry.group.dev.dependencies]
+tbump = "^6.11.0"
 pre-commit = "*"
 pytest = "^8.2.1"
 pytest-flake8 = "=1.1.1"
@@ -85,3 +86,27 @@ line-length = 79
 profile = "black"
 line_length = 79
 force_single_line = true
+
+[tool.tbump]
+
+[tool.tbump.git]
+message_template = "Version {new_version}"
+tag_template = "{new_version}"
+
+[tool.tbump.version]
+current = "0.3.4"
+regex = '''
+  (?P<major>\d+)
+  \.
+  (?P<minor>\d+)
+  \.
+  (?P<patch>\d+)
+  (?P<prerelease>[a-z]+\d+)?
+'''
+
+[[tool.tbump.file]]
+src = "jsonschema_path/__init__.py"
+
+[[tool.tbump.file]]
+src = "pyproject.toml"
+search = 'version = "{current_version}"'
