--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,11 +41,12 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-pathable = {version = "^0.4.1", python = ">=3.9.0,<4.0.0"}
+pathable = {version = "^0.5.0b1", python = ">=3.9.0,<4.0.0", allow-prereleases = true}
 python = ">=3.9.0,<4.0.0"
 PyYAML = ">=5.1"
 requests = {version = "^2.31.0", optional = true}
 referencing = "<0.37.0"
+pyrsistent = "^0.20.0"
 
 [tool.poetry.group.dev.dependencies]
 tbump = "^6.11.0"
@@ -63,7 +64,7 @@ typing-extensions = "^4.10.0"  # required by responses. See https://github.com/p
 responses = "^0.25.0"
 deptry = "^0.19.1"
 pyflakes = "^2.5.0"
-bump2version = "^1.0.1"
+ipdb = "^0.13.13"
 
 [tool.poetry.extras]
 requests = ["requests"]
