--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
 ---
-default_stages: [commit, push]
+default_stages: [pre-commit, pre-push]
 default_language_version:
   # force all unspecified python hooks to run python3
   python: python3
@@ -10,7 +10,7 @@ repos:
       - id: check-hooks-apply
 
   - repo: https://github.com/asottile/pyupgrade
-    rev: v2.38.4
+    rev: v3.21.0
     hooks:
       - id: pyupgrade
         args: ["--py310-plus"]
@@ -21,7 +21,7 @@ repos:
         name: Convert to f-strings with flynt
         entry: flynt
         language: python
-        additional_dependencies: ['flynt==0.76']
+        additional_dependencies: ['flynt==1.0.6']
 
       - id: black
         name: black
