--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ ignore_missing_imports = true
 
 [tool.poetry]
 name = "jsonschema-path"
-version = "0.4.0b8"
+version = "0.4.0"
 description = "JSONSchema Spec with object-oriented paths"
 authors = ["Artur Maciag <maciag.artur@gmail.com>"]
 license = "Apache-2.0"
@@ -93,7 +93,7 @@ message_template = "Version {new_version}"
 tag_template = "{new_version}"
 
 [tool.tbump.version]
-current = "0.4.0b8"
+current = "0.4.0"
 regex = '''
   (?P<major>\d+)
   \.
